--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
       </audio>
     </div>
 
-    <p onclick="hello('infoContainer')" id="version">v0.3.1</p>
+    <p onclick="hello('infoContainer')" id="version">v0.4.0</p>
 
     <div  id="infoContainer" style="display: none; justify-content: center; align-items: center; position: absolute;width: 100%; height: 100%;">
       <div id="infoBox">
@@ -306,13 +306,6 @@
                     <input 
                     oninput="setVol(this.value, cafe1)" id="cafevol" class="vol" type="range" min="0" max="10" value="5">
                 </div>
-
-                <br>
-
-                <div class="flex opt">
-                  <input oninput="autoBackground();" class="check" id="autobg" type="checkbox">
-                  <p>Enable Auto Background</p>
-              </div>
             </div>
         </div>
         <!-- Music -->
@@ -440,10 +433,27 @@
           </div>
 
             </div>
+            <div class="flex cat music">
+              <h1>Background</h1>
+              <div class="flex opt">
+                <input oninput="autoBackground();" class="radio" id="autobg" type="radio" name="bg">
+                <p>Enable Auto Background</p>
+              </div>
+              <div class="flex opt">
+                <input id="seekBGIn" oninput="toggleSeeking(this)" class="radio" checked="true" type="radio" name="bg">
+                <p>Manual Background</p>
+                </button>
+                <div id="seekBG" style="display: none;">
+                  <i onclick="seek('back')" class="material-icons">chevron_left</i>
+                  <i onclick="seek('next')" class="material-icons">chevron_right</i>
+                </div>
+              </div>
+
+            </div>
         </div>
     </div>
 </body>
-<script src="script.js"></script>
+<script id="script" src="script.js"></script>
 <script>
     
 </script>
